<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginFragment">

    <TextView
        android:id="@+id/txt_login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/manrope_bold"
        android:lineHeight="40dp"
        android:text="@string/LoginHeader"
        android:textAlignment="center"
        android:textColor="@color/hader_color"
        android:textFontWeight="700"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/manrope"
        android:lineHeight="24dp"
        android:text="@string/LoginDescription"
        android:textColor="@color/description_color"
        android:textFontWeight="400"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_header" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edt_drawable"
        android:drawableStart="@drawable/call"
        android:drawablePadding="16dp"
        android:hint="Mobile Number"
        android:inputType="number"
        android:padding="8dp"
        android:textColorHint="@color/description_bold_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_description" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_drawable"
        android:fontFamily="@font/manrope_bold"
        android:lineHeight="24dp"
        android:text="@string/loginbtn"
        android:textFontWeight="700"
        android:textSize="16dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_number" />


</androidx.constraintlayout.widget.ConstraintLayout>