<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.VerificationFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_verification_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/manrope_bold"
        android:lineHeight="32dp"
        android:text="@string/otp_verification"
        android:textColor="@color/hader_color"
        android:textFontWeight="700"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/txt_verification_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/manrope"
        android:lineHeight="24dp"
        android:textAlignment="center"
        android:textColor="@color/description_color"
        android:textFontWeight="400"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verification_header" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verification_description">

        <EditText
            android:id="@+id/edt_opt_digit1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/edt_drawable"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edt_opt_digit2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/edt_drawable"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edt_opt_digit3"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/edt_drawable"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edt_opt_digit4"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/edt_drawable"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="25dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/manrope"
        android:text="@string/didn_t_received_otp"
        android:textFontWeight="400"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txt_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/manrope_bold"
        android:lineHeight="24dp"
        android:text="Resend OTP"
        android:textColor="#273B3C"
        android:textFontWeight="700"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txt_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/manrope"
        android:text="25 sec"
        android:textColor="@color/description_bold_color"
        android:textFontWeight="400"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_drawable"
        android:fontFamily="@font/manrope_bold"
        android:lineHeight="24dp"
        android:text="@string/verify"
        android:textFontWeight="700"
        android:textSize="16dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resend_otp" />


</androidx.constraintlayout.widget.ConstraintLayout>